--- a/index.html
+++ b/index.html
@@ -10,38 +10,9 @@
 第一次作業
 姓名:陳詩瀚
 學號:3411007076
-
-<hr>
-<h2>文字化格式</h2>
-<b>粗體</b>
-<i>斜體</i>
-<sub>下標標籤</sub>
-<sup>上標標籤</sup>
-<ins>新增標示</ins>
-<del>刪除標示</del>
-<mark>標註</mark>
-<hr>
-<h2>超連結</h2>
-<a href="https://www.nutc.edu.tw">台中科技大學</a>
-<!--另開視窗-->
-<a href="https://www.google.com.tw"target="_blank">google</a>
-<!--錨點-->
-<a href="#up">移動到最上面</a>
-<hr>
-<h2>image圖片</h2>
-<img src="school.png" alt=""width="100"height="100">
-<img src="https://fakeimg.pl/300x200/200">
-<hr>
-<h2>列表ol li</h2>
-<ul type="square">
-    <li>001</li>
-    <li>002</li>
-    <li>003</li>
-</ul>
-<ol type="I">
-    <li>001</li>
-    <li>002</li>
-    <li>003</li>
-</ol>
+<br>
+    <a href="demo.html">元件練習</a>
+    <br>
+    <a href="table.html">表格練習</a>
 </body>
 </html>
