--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <a href="demo.html">元件練習</a>
     <br>
     <a href="table.html">表格練習</a>
+    <br>
+    <a href="css.html">css樣式練習</a>
+    <br>
 </body>
 </html>
