--- a/css.html
+++ b/css.html
@@ -19,41 +19,111 @@
             color: green;
         }
         *{
-            font-family: "標楷體";
+            font-family:"標楷體" ;
         }
         /* 屬性選擇器 */
         input[type="button"]{
             background-color: yellow;
         }
-        /* 後代理選擇器(使用空格)*/
-        .two li{
+        /* 後代選擇器(使用空格) */
+        ol li{
+            color: red;
+        }
+        /* 子選擇器(使用>符號) */
+        div>a{
+            color: green;
+        }
+        /*同層相鄰選擇器(使用+符號)、同層相鄰選擇器(使用~符號) */
+        /* ul+p{
+            color:red;
+        }*/
+        ul~p{
+            color: yellow;
+        }
+        /* 伪類選擇器(使用:符號) */
+        a:hover{
+            color: red;
+        }
+        /* 伪類元素選擇器(使用::符號)「在標籤的結尾插入文字」*/
+        div::after{
+            content:"結束"
+        }
+        /* 群組選擇器(使用,符號) */
+        ul li,ol li{
             color: red;
         }
     </style>
 </head>
 <body>
-   <h2>型態選擇器(標籤)</h2>
-   <span>型態選擇器</span> 
-   <hr>
-   <h2>class選擇器(使用.符號)</h2>
-   <a href="#" class="one">test</a>
-   <hr>
-   <h2>id選擇器(使用.符號)</h2>
-   <a href="#" id="one">id選擇器</a>
-   <hr>
-   <h2>屬性選擇器</h2>
-   <input type="button" value="按鈕">
-   <hr>
-   <h2>後代選擇器(使空格)</h2>
-   <ul class="two">
-       <li>1</li>
-       <li>2</li>
-       <li>3</li>
-   </ul>
-   <ol>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-   </ol>
+    <h2>型態選擇器(標籤)</h2>
+        <span>型態選擇器</span>
+    <hr>
+    <h2>class選擇器(使用.符號)</h2>
+        <a href="#" class="one">test</a>
+    <hr>
+    <h2>id選擇器(使用#符號)</h2>
+        <a href="#" id="one">id選擇器</a>
+    <hr>
+    <h2>屬性選擇器</h2>
+       <input type="button" value="按鈕">
+       <hr>
+       <h2>後代選擇器(使用空格)</h2>
+        <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+        </ul>
+        <ol>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+        </ol>
+        <hr>
+        <h2>子選擇器(使用>符號)</h2>
+        <div>
+            <p>
+                <a href="#">p</a>
+            </p>
+        </div>
+        <div>
+            <a href="#">a</a>
+        </div>
+        <h2>同層相鄰選擇器(使用+符號)、同層相鄰選擇器(使用~符號)</h2>
+        <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+        </ul>
+        <p>tt1</p>
+        <p>tt2</p>
+        <p>tt3</p>
+        <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+        </ul>
+        <p>tt1</p>
+        <p>tt2</p>
+        <p>tt3</p>
+        <hr>
+        <h2>伪類選擇器(使用:符號)</h2>
+        <a href="#">伪類選擇器</a>
+        <hr>
+        <h2>伪元選擇器(使用::符號)</h2>
+        <div>
+            測試
+        </div>
+        <hr>
+        <h2>群組選擇器(使用,符號)</h2>
+        <ul>
+            <li>01</li>
+            <li>02</li>
+            <li>03</li>
+        </ul>
+        <ol>
+            <li>01</li>
+            <li>02</li>
+            <li>03</li>
+        </ol>
 </body>
 </html>
