--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    第一次作業
-    姓名:李冠宇
-    學號:3411007079
-    <br>
+第一次作業
+姓名:陳詩瀚
+學號:3411007076
+<br>
     <a href="demo.html">元件練習</a>
     <br>
     <a href="table.html">表格練習</a>
     <br>
-    <a href="css.html">CSS選擇器練習</a>
+    <a href="css.html">css樣式練習</a>
     <br>
-    <a href="background.html">CSS_background樣式練習</a>
+     <a href="background.html">CSS_background樣式練習</a>
     <br>
     <a href="css_all.html">CSS_all樣式練習</a>
     <br>
-    <a href="layout.html">CSS_layout</a>
+    <a href="layount.html">layount</a>
+    <br>
+
 </body>
 </html>
