--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <br>
     <a href="layount.html">layount</a>
     <br>
-    <a href="one.thml">one</a>
+<a href="one.html">one</a>
     <br>
 
 </body>
